--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ i
 		<meta charset="UTF-8" />
 		<meta content="IE=Edge" http-equiv="X-UA-Compatible" />
 		<meta name="description" content="A new Flutter project." />
+		<!-- No Follow on Google Chrome-->
+		<meta name="robots" content="noindex,follow" />
 
 		<!-- iOS meta tags & icons -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -37,7 +39,7 @@ i
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
 		<script>
-			var serviceWorkerVersion = '2322665252';
+			var serviceWorkerVersion = '2361537344';
 			var scriptLoaded = false;
 			function loadMainDartJs() {
 				if (scriptLoaded) {
